--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vision-camera": "^2.15.4",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
