--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "expo": "^49.0.3",
+    "expo-camera": "~13.4.2",
     "expo-constants": "~14.4.2",
     "expo-font": "^11.4.0",
     "expo-linking": "^5.0.2",
@@ -24,9 +25,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-camera": "~13.4.2",
-    "expo-av": "~13.4.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
